<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.onix.postcard.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setting.SettingFragment">

        <TextView
            android:id="@+id/settingNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/setting_text_margin"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settingNameContainer"
            style="@style/settingTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorMessage="@{viewModel.errorName}"
            app:layout_constraintEnd_toStartOf="@+id/settingGuideline"
            app:layout_constraintStart_toStartOf="@+id/settingNameLabel"
            app:layout_constraintTop_toBottomOf="@id/settingNameLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settingName"
                style="@style/settingEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name_here"
                android:text="@={viewModel.model.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/settingTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/setting_text_margin"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingNameContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settingTitleContainer"
            style="@style/settingTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorMessage="@{viewModel.errorTitle}"
            app:layout_constraintEnd_toStartOf="@+id/settingGuideline"
            app:layout_constraintStart_toStartOf="@+id/settingTitleLabel"
            app:layout_constraintTop_toBottomOf="@+id/settingTitleLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settingTitle"
                style="@style/settingEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title_here"
                android:text="@={viewModel.model.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/settingTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/setting_text_margin"
            android:text="@string/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingTitleContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settingTextContainer"
            style="@style/settingTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorMessage="@{viewModel.errorText}"
            app:layout_constraintEnd_toStartOf="@+id/settingGuideline"
            app:layout_constraintStart_toStartOf="@+id/settingTextLabel"
            app:layout_constraintTop_toBottomOf="@+id/settingTextLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settingText"
                style="@style/settingEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_text_here"
                android:text="@={viewModel.model.text}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingTest"
            style="@style/gradientRoundButton"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/settings_button_height"
            android:onClick="@{() -> viewModel.showAnimationFragment()}"
            android:text="@string/test"
            app:layout_constraintBottom_toTopOf="@id/settingLaunch"
            app:layout_constraintEnd_toEndOf="@id/settingLaunch"
            app:layout_constraintStart_toStartOf="@id/settingLaunch" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingLaunch"
            style="@style/solidRoundButton"
            android:layout_width="wrap_content"
            android:onClick="@{() -> viewModel.showAnimationFragment()}"
            android:text="@string/launch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/settingGuideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>